# 8505-a3-backdoor

./: .gitignore  CMakeLists.txt  README.md
Client/: CMakeLists.txt
Client/src/client/: CovertSocket.cpp  CovertSocket.h  NetworkMonitor.cpp  NetworkMonitor.h  TrafficAnalyzer.cpp  TrafficAnalyzer.h  main.cpp
Client/src/utils/: Logger.cpp  argparcer.h
Server/: CMakeLists.txt
Server/examples/pkt_sniffer/: proc_hdrs.c
Server/src/server/: CovertSocket.cpp  CovertSocket.h  NetworkMonitor.cpp  NetworkMonitor.h  TrafficAnalyzer.cpp  main.cpp
Server/src/utils/: Logger.cpp  argparcer.h
docs/: DesignDocument.odt  TestDocument.ods  diagrams.zargo  diagrams.zargo~
examples/: lookup.c  pkt_cap3.c
examples/pkt_sniffer/: pkt_sniffer.c  pkt_sniffer.h  proc_ether.c  proc_payload.c
src/server/: CovertSocket.cpp  CovertSocket.h  NetworkMonitor.cpp  NetworkMonitor.h  TrafficAnalyzer.cpp  TrafficAnalyzer.h  main.cpp
src/utils/: Logger.h  Structures.h
